Add a responsive pane for history and memory.

--- a/SimpleUwpCalculator/SimpleUwpCalculator.csproj
+++ b/SimpleUwpCalculator/SimpleUwpCalculator.csproj
@@ -155,6 +155,9 @@
       <Version>6.2.10</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
